bug修复已及现代化更新

--- a/404.html
+++ b/404.html
@@ -204,8 +204,8 @@
         <p>我们找不到您请求的页面。这可能是链接错误，或者该页面已被移除。不要担心，我们可以帮您找到正确的方向！</p>
 
         <div class="buttons">
-            <a href="/" class="btn">返回首页</a>
-            <a href="/faq.md" class="btn btn-outline">查看帮助中心</a>
+            <a href="/index.html" class="btn">返回首页</a>
+            <a href="/FQA.html" class="btn btn-outline">查看帮助中心</a>
         </div>
 
         <div class="search-form">
@@ -213,13 +213,13 @@
         </div>
 
         <div class="links">
-            <a href="/">首页</a>
+            <a href="/index.html">首页</a>
             <a href="/README.md">主页</a>
             <a href="/changelog/main.html">更新日志</a>
             <a href="/modlist.md">模组列表</a>
             <a href="/jiang-hun-gong-ju/README.md">匠魂工具</a>
             <a href="/jiang-hun-kui-jia/README.md">匠魂盔甲</a>
-            <a href="/fqa.md">FQA</a>
+            <a href="/FQA.html">FQA</a>
         </div>
 
         <div class="footer">
@@ -230,14 +230,14 @@
     </div>
 
     <script>
-        // 为搜索框添加键盘事件
+
         document.querySelector('.search-input').addEventListener('keypress', function(e) {
             if (e.key === 'Enter') {
                 alert('搜索功能正在开发中...');
             }
         });
 
-        // 添加一些互动效果
+
         document.addEventListener('DOMContentLoaded', function() {
             const errorIcon = document.querySelector('.error-icon');
 
