--- a/changelog/main.html
+++ b/changelog/main.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>更新日志 - 中文维基</title>
+    <link rel="icon" href="assets/cti-logo.png" type="image/png">
+    <title>更新日志 - CTI wiki</title>
     <style>
         :root {
             --primary-color: #5b26f7;
@@ -16,10 +17,6 @@
             --transition: all 0.3s ease;
             --card-bg: #ffffff;
             --content-bg: #f8f9fa;
-            --shadow-color: rgba(0, 0, 0, 0.1);
-            --card-hover-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
-            --gradient-start: #f0f4ff;
-            --gradient-end: #e0e9ff;
         }
 
         [data-theme="dark"] {
@@ -31,13 +28,8 @@
             --border-color: #333647;
             --card-bg: #252533;
             --content-bg: #1e1e2d;
-            --shadow-color: rgba(0, 0, 0, 0.3);
-            --card-hover-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-            --gradient-start: #2a2a3d;
-            --gradient-end: #3a3a53;
         }
-
-        * {
+* {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
