--- a/FQA.html
+++ b/FQA.html
@@ -4,496 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FQA - 游戏常见问题解答</title>
-    <style>
-        :root {
-            --primary-color: #5b26f7;
-            --primary-light: #e7e1ff;
-            --secondary-color: #f8f9fa;
-            --text-color: #1e1e1e;
-            --text-secondary: #6c757d;
-            --border-color: #e9ecef;
-            --radius: 14px;
-            --transition: all 0.3s ease;
-            --card-bg: #ffffff;
-            --content-bg: #f8f9fa;
-        }
-
-        [data-theme="dark"] {
-            --primary-color: #935bf8;
-            --primary-light: #562aef;
-            --secondary-color: #1e1e2d;
-            --text-color: #e9e9e9;
-            --text-secondary: #a8aab3;
-            --border-color: #333647;
-            --card-bg: #252533;
-            --content-bg: #1e1e2d;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-        }
-
-        body {
-            background-color: var(--content-bg);
-            color: var(--text-color);
-            line-height: 1.6;
-        }
-
-        a {
-            color: var(--primary-color);
-            text-decoration: none;
-            transition: var(--transition);
-        }
-
-        a:hover {
-            color: #3d1c9e;
-        }
-
-        /* 导航栏 */
-        .navbar {
-            background-color: var(--card-bg);
-            padding: 15px 30px;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            transition: var(--transition);
-        }
-
-        .nav-left {
-            display: flex;
-            align-items: center;
-        }
-
-        .logo {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-weight: 700;
-            font-size: 20px;
-            color: var(--primary-color);
-        }
-
-        .logo-icon {
-            font-size: 26px;
-        }
-
-        .nav-right {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-        }
-
-        .theme-toggle {
-            background: none;
-            border: none;
-            color: var(--text-secondary);
-            cursor: pointer;
-            font-size: 20px;
-            transition: var(--transition);
-        }
-
-        .theme-toggle:hover {
-            color: var(--primary-color);
-        }
-
-        .search-container {
-            position: relative;
-            width: 300px;
-            max-width: 90%;
-        }
-
-        .search-input {
-            width: 100%;
-            padding: 10px 15px 10px 40px;
-            border: 1px solid var(--border-color);
-            border-radius: var(--radius);
-            background-color: rgba(255, 255, 255, 0.1);
-            font-size: 14px;
-            color: var(--text-color);
-            transition: var(--transition);
-        }
-
-        .search-input:focus {
-            outline: none;
-            border-color: var(--primary-color);
-            box-shadow: 0 0 0 2px var(--primary-light);
-        }
-
-        .search-icon {
-            position: absolute;
-            left: 12px;
-            top: 50%;
-            transform: translateY(-50%);
-            color: var(--text-secondary);
-            transition: var(--transition);
-        }
-
-        .search-input:focus + .search-icon {
-            color: var(--primary-color);
-        }
-
-        /* 主要内容区域 */
-        .main-container {
-            max-width: 1200px;
-            margin: 24px auto;
-            display: flex;
-            gap: 24px;
-            padding: 0 16px;
-        }
-
-        /* 侧边栏 */
-        .sidebar {
-            width: 280px;
-            flex-shrink: 0;
-        }
-
-        /* 内容区域 */
-        .content {
-            flex-grow: 1;
-        }
-
-        .page-header {
-            background-color: var(--card-bg);
-            border-radius: var(--radius);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-            padding: 24px;
-            margin-bottom: 16px;
-            transition: var(--transition);
-        }
-
-        .page-title {
-            font-size: 28px;
-            font-weight: 700;
-            margin-bottom: 16px;
-            color: var(--text-color);
-        }
-
-        .page-actions {
-            display: flex;
-            gap: 12px;
-            margin-bottom: 16px;
-            flex-wrap: wrap;
-        }
-
-        .btn {
-            padding: 8px 16px;
-            border-radius: var(--radius);
-            font-weight: 500;
-            cursor: pointer;
-            border: none;
-            transition: var(--transition);
-        }
-
-        .btn-primary {
-            background-color: var(--primary-color);
-            color: white;
-        }
-
-        .btn-primary:hover {
-            background-color: #3d1c9e;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(91, 38, 247, 0.2);
-        }
-
-        .btn-outline {
-            background-color: transparent;
-            color: var(--primary-color);
-            border: 1px solid var(--primary-color);
-        }
-
-        .btn-outline:hover {
-            background-color: var(--primary-light);
-        }
-
-        .page-tabs {
-            display: flex;
-            border-bottom: 1px solid var(--border-color);
-            margin-bottom: 16px;
-            overflow-x: auto;
-            scrollbar-width: none;
-        }
-
-        .page-tabs::-webkit-scrollbar {
-            display: none;
-        }
-
-        .page-tab {
-            padding: 8px 16px;
-            cursor: pointer;
-            border-bottom: 2px solid transparent;
-            transition: var(--transition);
-            display: flex;
-            align-items: center;
-            gap: 6px;
-            white-space: nowrap;
-        }
-
-        .page-tab:hover {
-            color: var(--primary-color);
-        }
-
-        .page-tab.active {
-            color: var(--primary-color);
-            border-bottom-color: var(--primary-color);
-            font-weight: 500;
-        }
-
-        .page-content {
-            background-color: var(--card-bg);
-            border-radius: var(--radius);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-            padding: 24px;
-        }
-
-        .content-section {
-            margin-bottom: 24px;
-        }
-
-        .section-title {
-            font-size: 20px;
-            font-weight: 600;
-            margin-bottom: 16px;
-            color: var(--text-color);
-            border-left: 4px solid var(--primary-color);
-            padding-left: 12px;
-            transition: var(--transition);
-        }
-
-        .section-title:hover {
-            transform: translateX(5px);
-        }
-
-        .question-card {
-            background-color: var(--card-bg);
-            border-radius: var(--radius);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-            padding: 20px;
-            margin-bottom: 20px;
-            transition: var(--transition);
-        }
-
-        .question-card:hover {
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-            transform: translateY(-5px);
-        }
-
-        .question-header {
-            font-size: 16px;
-            font-weight: 600;
-            margin-bottom: 10px;
-            color: var(--text-color);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            transition: var(--transition);
-        }
-
-        .question-header:hover {
-            color: var(--primary-color);
-        }
-
-        .question-content {
-            color: var(--text-secondary);
-            line-height: 1.7;
-        }
-
-        .code {
-            background-color: rgba(91, 38, 247, 0.1);
-            padding: 2px 6px;
-            border-radius: 4px;
-            font-family: monospace;
-            color: var(--primary-color);
-            transition: var(--transition);
-        }
-
-        .code:hover {
-            background-color: rgba(91, 38, 247, 0.2);
-        }
-
-        /* 页脚 */
-        footer {
-            background-color: var(--card-bg);
-            padding: 30px 0;
-            margin-top: 40px;
-            color: var(--text-secondary);
-            font-size: 14px;
-            text-align: center;
-            transition: var(--transition);
-        }
-
-        footer:hover {
-            background-color: var(--primary-light);
-        }
-
-        .footer-content {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 16px;
-        }
-
-        .footer-links {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 20px;
-            flex-wrap: wrap;
-        }
-
-        .footer-links a {
-            color: var(--text-secondary);
-            transition: var(--transition);
-        }
-
-        .footer-links a:hover {
-            color: var(--primary-color);
-        }
-
-        .copyright {
-            margin-top: 20px;
-            font-size: 12px;
-            color: var(--text-secondary);
-        }
-
-        /* 响应式设计 */
-        @media (max-width: 960px) {
-            .main-container {
-                flex-direction: column;
-            }
-
-            .sidebar {
-                width: 100%;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .search-container {
-                width: 60%;
-            }
-
-            .page-actions {
-                flex-wrap: wrap;
-            }
-
-            .page-header, .page-content {
-                padding: 16px;
-            }
-        }
-
-        @media (max-width: 576px) {
-            .search-container {
-                width: 100%;
-                margin: 12px 0;
-            }
-
-            .page-title {
-                font-size: 22px;
-            }
-        }
-
-        /* 侧边栏导航 */
-        .fqa-sidebar {
-            background-color: var(--card-bg);
-            border-radius: var(--radius);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-            padding: 20px;
-            transition: var(--transition);
-        }
-
-        .fqa-sidebar:hover {
-            transform: translateX(10px);
-        }
-
-        .fqa-sidebar-title {
-            font-size: 18px;
-            font-weight: 600;
-            margin-bottom: 16px;
-            color: var(--text-color);
-        }
-
-        .fqa-nav-list {
-            list-style: none;
-        }
-
-        .fqa-nav-item {
-            margin-bottom: 8px;
-        }
-
-        .fqa-nav-link {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            padding: 10px;
-            border-radius: var(--radius);
-            color: var(--text-color);
-            transition: var(--transition);
-        }
-
-        .fqa-nav-link:hover {
-            background-color: var(--primary-light);
-            color: var(--primary-color);
-        }
-
-        .fqa-nav-link.active {
-            background-color: var(--primary-light);
-            color: var(--primary-color);
-            font-weight: 500;
-        }
-
-        .fqa-nav-link i {
-            font-size: 16px;
-        }
-
-        /* 动效 */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes floatAnimation {
-            0% {
-                transform: translateY(0px);
-                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            }
-            50% {
-                transform: translateY(-10px);
-                box-shadow: 0 14px 25px rgba(0, 0, 0, 0.2);
-            }
-            100% {
-                transform: translateY(0px);
-                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            }
-        }
-    </style>
+    <link rel="icon" href="assets/cti-logo.png" type="image/png">
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/FQA/general.css">
+    <link rel="stylesheet" href="css/FQA/navbar.css">
+    <link rel="stylesheet" href="css/FQA/main-content.css">
+    <link rel="stylesheet" href="css/FQA/question-card.css">
+    <link rel="stylesheet" href="css/FQA/footer.css">
+    <link rel="stylesheet" href="css/FQA/media-queries.css">
+    <link rel="stylesheet" href="css/FQA/sidebar-nav.css">
+    <link rel="stylesheet" href="css/FQA/animations.css">
 </head>
 <body>
-    <!-- 导航栏 -->
-    <nav class="navbar">
+<<nav class="navbar">
         <div class="nav-left">
             <div class="logo">
-                <span class="logo-icon">📚</span>
-                <span>CTI Wiki</span>
+                <img src="assets/cti-logo.png" alt="CTI Wiki Logo">
+                <span>CTI wiki</span>
             </div>
         </div>
 
@@ -507,9 +34,9 @@
         </div>
     </nav>
 
-    <!-- 主要内容区域 -->
+
     <div class="main-container">
-        <!-- 侧边栏 -->
+
         <div class="sidebar">
             <div class="fqa-sidebar">
                 <h3 class="fqa-sidebar-title">常见问题分类</h3>
@@ -538,7 +65,7 @@
             </div>
         </div>
 
-        <!-- 内容区域 -->
+
         <div class="content">
             <div class="page-header">
                 <h1 class="page-title">FQA - 游戏常见问题解答</h1>
@@ -651,81 +178,8 @@
         </div>
     </footer>
 
-    <script>
-        // 深色/浅色主题切换
-        const themeToggle = document.getElementById('themeToggle');
-        const body = document.body;
-
-        const savedTheme = localStorage.getItem('theme');
-        if (savedTheme) {
-            body.setAttribute('data-theme', savedTheme);
-        }
-
-        themeToggle.addEventListener('click', () => {
-            if (body.getAttribute('data-theme') === 'dark') {
-                body.removeAttribute('data-theme');
-                localStorage.removeItem('theme');
-            } else {
-                body.setAttribute('data-theme', 'dark');
-                localStorage.setItem('theme', 'dark');
-            }
-        });
-
-        // 侧边栏导航高亮
-        const fqaNavLinks = document.querySelectorAll('.fqa-nav-link');
-        const questionCards = document.querySelectorAll('.question-card');
-
-        // 使用IntersectionObserver观察问题卡片的可见性
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    const id = entry.target.getAttribute('id');
-                    fqaNavLinks.forEach(link => {
-                        link.classList.remove('active');
-                        const href = link.getAttribute('href');
-                        if (href === `#${id}`) {
-                            link.classList.add('active');
-                        }
-                    });
-                }
-            });
-        }, { threshold: 0.5 });
-
-        // 观察每个问题卡片
-        questionCards.forEach(card => {
-            const id = card.getAttribute('id');
-            if (id) {
-                observer.observe(card);
-            }
-        });
-
-        // 初始化：高亮第一个问题
-        fqaNavLinks[0].classList.add('active');
-
-        // 添加滚动动画效果
-        document.addEventListener('DOMContentLoaded', () => {
-            // 为所有需要动画效果的元素添加初始状态
-            const animatedElements = document.querySelectorAll('.content-section, .question-card, .section-title');
-            animatedElements.forEach(el => {
-                el.style.opacity = '0';
-                el.style.transform = 'translateY(20px)';
-                el.style.transition = 'opacity 0.5s ease-out, transform 0.5s ease-out';
-            });
-
-            // 使用IntersectionObserver观察元素进入视口
-            const fadeObserver = new IntersectionObserver((entries) => {
-                entries.forEach(entry => {
-                    if (entry.isIntersecting) {
-                        entry.target.style.opacity = '1';
-                        entry.target.style.transform = 'translateY(0)';
-                    }
-                });
-            }, { threshold: 0.1 });
-
-            animatedElements.forEach(el => {
-                fadeObserver.observe(el);
-            });
-        });
-    </script>
+    <script src="javaScript/theme-toggle.js"></script>
+    <script src="javaScript/FQA/sidebar-highlight.js"></script>
+    <script src="javaScript/FQA/scroll-animation.js"></script>
 </body>
 </html>
