--- a/FQA.html
+++ b/FQA.html
@@ -6,14 +6,14 @@
     <title>FQA - 游戏常见问题解答</title>
     <link rel="icon" href="assets/cti-logo.png" type="image/png">
     <link rel="stylesheet" href="css/variables.css">
-    <link rel="stylesheet" href="css/FQA/general.css">
-    <link rel="stylesheet" href="css/FQA/navbar.css">
-    <link rel="stylesheet" href="css/FQA/main-content.css">
-    <link rel="stylesheet" href="css/FQA/question-card.css">
-    <link rel="stylesheet" href="css/FQA/footer.css">
-    <link rel="stylesheet" href="css/FQA/media-queries.css">
-    <link rel="stylesheet" href="css/FQA/sidebar-nav.css">
-    <link rel="stylesheet" href="css/FQA/animations.css">
+    <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/main-content.css">
+    <link rel="stylesheet" href="css/question-card.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/media-queries.css">
+    <link rel="stylesheet" href="css/sidebar-nav.css">
+    <link rel="stylesheet" href="css/animations.css">
 </head>
 <body>
 <<nav class="navbar">
