--- a/license.html
+++ b/license.html
@@ -131,8 +131,8 @@
         </div>
     </footer>
 
-    <script src="js/theme-toggle.js"></script>
-    <script src="js/sidebar-highlight.js"></script>
-    <script src="js/scroll-animation.js"></script>
+    <script src="javaScript/theme-toggle.js"></script>
+    <script src="javaScript/FQA/sidebar-highlight.js"></script>
+    <script src="javaScript/FQA/scroll-animation.js"></script>
 </body>
 </html>
