--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="assets/cti-logo.png" type="image/png">
 </head>
 <body>
-    <nav class="navbar">
+   <<nav class="navbar">
         <div class="nav-left">
             <div class="logo">
                 <img src="assets/cti-logo.png" alt="CTI Wiki Logo">
@@ -17,13 +17,10 @@
             </div>
         </div>
 
-
         <div class="nav-right">
             <div class="search-container">
                 <span class="search-icon">🔍</span>
-                <label>
-                    <input type="text" class="search-input" placeholder="搜索内容...">
-                </label>
+                <input type="text" class="search-input" placeholder="搜索内容...">
             </div>
 
             <button class="theme-toggle" id="themeToggle">🌓</button>
