--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="assets/cti-logo.png" type="image/png">
 </head>
 <body>
-   <<nav class="navbar">
+   <nav class="navbar">
         <div class="nav-left">
             <div class="logo">
                 <img src="assets/cti-logo.png" alt="CTI Wiki Logo">
