--- a/FQA.html
+++ b/FQA.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/animations.css">
 </head>
 <body>
-<<nav class="navbar">
+<nav class="navbar">
         <div class="nav-left">
             <div class="logo">
                 <img src="assets/cti-logo.png" alt="CTI Wiki Logo">
