--- a/license.html
+++ b/license.html
@@ -127,7 +127,7 @@
     </style>
 </head>
 <body>
-   <<nav class="navbar">
+   <nav class="navbar">
         <div class="nav-left">
             <div class="logo">
                 <img src="assets/cti-logo.png" alt="CTI Wiki Logo">
